created temporary image gallery styling, some day this will be a much more interactive interface.

--- a/ember/app/styles/mycss/1-settings/colors.scss
+++ b/ember/app/styles/mycss/1-settings/colors.scss
@@ -8,3 +8,4 @@ $color-purple: #9E78C2 !default;
 $color-green: #629C44 !default;
 $color-gray: #333333 !default;
 $color-lightgray: #CCCCCC !default;
+$color-black: #000000 !default;
