Moved "English Game" to server-side only, so that the fingerprinting doesn't mess up link connections to images and scripts (b/c Ember doesn't play nice with non-ember pages).  Additionally adding 1 new graphic for a planet.

--- a/ember/app/styles/mycss/5-modules/parallax.scss
+++ b/ember/app/styles/mycss/5-modules/parallax.scss
@@ -1,5 +1,12 @@
-.parallax-clouds-container {
+.parallax-container-outer {
 	position: relative;
+	overflow: hidden;
+}
+
+.parallax-container-inner {
+	position: absolute;
+	top: 0; left: 0;
+	width: 100%; height: 100%;
 }
 
 .parallax-clouds {
