--- a/ember/app/templates/projects.hbs
+++ b/ember/app/templates/projects.hbs
@@ -88,7 +88,7 @@
 							<p>At one point this game contained aspects of PHP and a MySQL database, however I've lost those pieces of code to time, which is very sad and highlights the need for repos like git!</p>
 						</div>
 						<footer class="ui-card-footer">
-							<a class="btn btn-primary" href="/projects/EnglishGame/game.htm">Play Game</a>
+							<a class="btn btn-primary" href="/EnglishGame/game.htm">Play Game</a>
 						</footer>
 					</div>
 				</div>
