--- a/ember/app/styles/pages/home.scss
+++ b/ember/app/styles/pages/home.scss
@@ -44,8 +44,19 @@
 
 
 
+	.hp-planet-001 {
+		position: absolute;
+		top: 140px; right: 5%;
+		margin-right: -140px;
+		background: transparent url('/images/planets/planet001.png') 0 0 no-repeat;
+		width: 264px; height: 264px;
+		opacity: 0.8;
+		// transition: margin-top 0.2s ease;
+	}
+
 	.hp-planet-earth {
 		position: relative;
+		top: $padding-section;
 		width: 100%; height: 560px;
 		overflow: hidden;
 	}
