--- a/ember/app/templates/index.hbs
+++ b/ember/app/templates/index.hbs
@@ -49,17 +49,23 @@
 
 
 	<!-- PROFESSIONAL EXPERIENCES -->
-	<section class="parallax-clouds-container">
-		<div class="parallax-clouds cloud-type-001" data-bottom-top="background-position: 700px 0px, -400px 300px;" data-top-bottom="background-position: 700px 1000px, -400px 1500px;"></div>
-		<div class="parallax-clouds cloud-type-002" data-bottom-top="background-position: 0px 500px, 150px 970px;" data-top-bottom="background-position: 0px 2800px, 150px 2500px;"></div>
-		<div class="parallax-clouds cloud-type-003" data-bottom-top="background-position: 500px 400px, -800px -500px;" data-top-bottom="background-position: 500px 1800px, -800px 1200px;"></div>
+	<section class="parallax-container-outer">
+		<div class="parallax-container-inner">
+			<div class="parallax-clouds cloud-type-001" data-bottom-top="background-position: 700px 0px, -400px 300px;" data-top-bottom="background-position: 700px 1000px, -400px 1500px;"></div>
+			<div class="parallax-clouds cloud-type-002" data-bottom-top="background-position: 0px 500px, 150px 970px;" data-top-bottom="background-position: 0px 2800px, 150px 2500px;"></div>
+			<div class="parallax-clouds cloud-type-003" data-bottom-top="background-position: 500px 400px, -800px -500px;" data-top-bottom="background-position: 500px 1800px, -800px 1200px;"></div>
+		</div>
+
+		<div class="parallax-container-inner">
+			<div class="hp-planet-001" data-bottom-top="margin-top: 500px;" data-top-bottom="margin-top: -150px;"></div>
+		</div>
 
 		<div class="container">
 			<h2 class="hp-title t-fsize-smaller">My History</h2>
 
 			{{history-bar model=model.my_history h1="h3" h2="h4" h3="h5"}}
 		</div>
-	</section>
 
-	<div class="hp-planet-earth"><div class="hp-planet-earth-image"></div></div>
+		<div class="hp-planet-earth"><div class="hp-planet-earth-image"></div></div>
+	</section>
 </div>
