Transparent background modifier for image-gallery

--- a/ember/app/styles/mycss/5-modules/image-gallery.scss
+++ b/ember/app/styles/mycss/5-modules/image-gallery.scss
@@ -11,3 +11,8 @@
 	margin-bottom: map-get($margins, 'normal');
 	display: block;
 }
+
+// modifier: 'transparent'
+.image-gallery-thumbnail-transparent {
+	background-color: transparent;
+}
