--- a/ember/app/templates/artwork.hbs
+++ b/ember/app/templates/artwork.hbs
@@ -6,6 +6,10 @@
 
 		<div class="row">
 			<div class="image-gallery-item columns four">
+				<img class="image-gallery-thumbnail image-gallery-thumbnail-transparent" src="images/planets/planet001.png"/>
+				<p>Small planet graphic for creating a space-like environment on the page.</p>
+			</div>
+			<div class="image-gallery-item columns four">
 				<img class="image-gallery-thumbnail" src="images/backgrounds/main.png"/>
 				<p>This background is meant to give some visual interest to a background of a page.  It's transparent nature allows it to be used with any color background.  Additionally it repeats infinitely in all directions, which allows it to seemlessly scale to fit any size.</p>
 			</div>
@@ -13,12 +17,12 @@
 				<img class="image-gallery-thumbnail" src="images/backgrounds/Cloud01.png"/>
 				<p>This background image is for a space-like background, the idea was to have a sort of nebula feeling to it.  It's transparent so that it can work with any background and when multiple of this image is layered, it gives a nice 3D effect.</p>
 			</div>
+		</div>
+		<div class="row">
 			<div class="image-gallery-item columns four">
 				<img class="image-gallery-thumbnail" src="images/backgrounds/earth.png"/>
 				<p>Earth! Need I say more?  Again, for a space-like background, only repeats infinitely on the x-axis.  I was also trying to make the continents look gem-like.</p>
 			</div>
-		</div>
-		<div class="row">
 			<div class="image-gallery-item columns four">
 				<img class="image-gallery-thumbnail" src="projects/Gallery/Birthday1.png"/>
 				<p>This was something I made as a birthday gift.  It was designed to be used as a desktop background.  Nearly all of it was made by me with some assistance by Paint Shop Pro 8 tools.  The letters in the center which read "Happy Birthday" are not colored in with a background I made, but the rest of the actual artwork I made.</p>
