Moon graphic created/added.

--- a/ember/app/templates/index.hbs
+++ b/ember/app/templates/index.hbs
@@ -59,6 +59,7 @@
 
 		<div class="parallax-container-inner">
 			<div class="hp-planet-001" data-bottom-top="margin-top: 500px;" data-top-bottom="margin-top: -150px;"></div>
+			<div class="hp-planet-002" data-bottom-top="margin-top: 800px;" data-top-bottom="margin-top: -200px;"></div>
 		</div>
 
 		<div class="container">
