--- a/ember/app/styles/pages/home.scss
+++ b/ember/app/styles/pages/home.scss
@@ -51,7 +51,15 @@
 		background: transparent url('/images/planets/planet001.png') 0 0 no-repeat;
 		width: 264px; height: 264px;
 		opacity: 0.8;
-		// transition: margin-top 0.2s ease;
+	}
+
+	.hp-planet-002 {
+		position: absolute;
+		top: 200px; right: 5%;
+		margin-right: 120px;
+		background: transparent url('/images/planets/planet002.png') 0 0 no-repeat;
+		width: 78px; height: 78px;
+		opacity: 0.8;
 	}
 
 	.hp-planet-earth {
