tweaked the timeline to work better with the new graphics.  Added rotating moon and gas giant planet.

--- a/ember/app/components/history-bar/template.hbs
+++ b/ember/app/components/history-bar/template.hbs
@@ -21,7 +21,7 @@
 		</div>
 	{{/each}}
 
-	<div class="history-bar-line">
+	<div id="skrollr-history-bar-line" class="history-bar-line">
 		<table class="history-bar-markers">
 			<tbody>
 				{{#each dates as |date|}}
@@ -34,6 +34,6 @@
 				{{/each}}
 			</tbody>
 		</table>
-		<div class="history-bar-fill" data-center-top="height: 0%;" data-_vh-center-top="height: 100%;"><div class="history-bar-indicator"></div></div>
+		<div class="history-bar-fill" data-center-top="height: 0%;" data-_shb_line-center-top="height: 100%;"><div class="history-bar-indicator"></div></div>
 	</div>
 </div>
