--- a/ember/app/components/history-bar/history-bar.scss
+++ b/ember/app/components/history-bar/history-bar.scss
@@ -8,11 +8,20 @@ $history-bar-indicator-width: $history-bar-width * 4;
 
 .history-bar-organization {
 	position: relative;
-	padding: 20px 0;
+	padding: 30px 0;
 	float: none;
 
-	ul { margin: 0; }
-	li:last-child { margin: 0; }
+	ul {
+		margin: 0;
+		line-height: 1.3;
+		list-style: none;
+	}
+
+	li {
+		margin-bottom: 15px;
+
+		&:last-child { margin: 0; }
+	}
 
 	.org-date,
 	.org-name,
