Added first ship graphic and a VERY simple particle effect, more refinements to come in the near future.

--- a/ember/app/templates/index.hbs
+++ b/ember/app/templates/index.hbs
@@ -51,12 +51,14 @@
 
 	<!-- PROFESSIONAL EXPERIENCES -->
 	<section class="parallax-container-outer">
+		<!-- parallax clouds -->
 		<div class="parallax-container-inner">
 			<div class="parallax-clouds cloud-type-001" data-bottom-top="background-position: 700px 0px, -400px 300px;" data-top-bottom="background-position: 700px 1000px, -400px 1500px;"></div>
 			<div class="parallax-clouds cloud-type-002" data-bottom-top="background-position: 0px 500px, 150px 970px;" data-top-bottom="background-position: 0px 2800px, 150px 2500px;"></div>
 			<div class="parallax-clouds cloud-type-003" data-bottom-top="background-position: 500px 400px, -800px -500px;" data-top-bottom="background-position: 500px 1800px, -800px 1200px;"></div>
 		</div>
 
+		<!-- parallax planets -->
 		<div class="parallax-container-inner">
 			<div class="hp-planet hp-planet-001" data--400-bottom-top="margin-top: 250px;" data--100-top-bottom="margin-top: 50px;"></div>
 
@@ -65,7 +67,14 @@
 				<div class="hp-moon"></div>
 			</div>
 
-			<div class="hp-planet hp-planet-003" data-bottom-top="bottom: 500px;" data-top-bottom="bottom: 1200px;"></div>
+			<div class="hp-planet hp-planet-003" data-bottom-top="margin-bottom: 0px;" data-top-bottom="margin-bottom: 200px;"></div>
+		</div>
+
+		<!-- parallax ship & particle effect -->
+		<div class="parallax-container-inner">
+			<div class="hp-ship hp-ship-001" data-bottom-top="bottom: 900px;" data-top-bottom="bottom: 3000px;">
+				<div class="hp-engine"></div>
+			</div>
 		</div>
 
 		<div class="container">
