--- a/ember/app/styles/pages/home.scss
+++ b/ember/app/styles/pages/home.scss
@@ -75,8 +75,8 @@
 
 	.hp-planet-003 {
 		$planet003-size: 325px;
-		bottom: 500px; left: 10%;
-		margin-left: 0px;
+		bottom: 700px; left: 10%;
+		margin-left: 50px;
 		background: transparent url('/images/planets/planet003.png') 0 0 no-repeat;
 		width: $planet003-size; height: $planet003-size;
 	}
@@ -104,4 +104,37 @@
 		box-shadow: 0 3px 30px rgba($atmosphere, 1), 0 3px 20px rgba($atmosphere3, 0.9), 0 3px 85px rgba($atmosphere3, 0.9), inset 0 5px 80px rgba($atmosphere2, 0.65);
 		border: 1px solid $atmosphere3;
 	}
+
+
+
+
+	.hp-ship {
+		position: absolute;
+		opacity: 0.6;
+
+		@include breakpoint($bp-s) {
+			opacity: 1;
+		}
+	}
+
+	.hp-ship-001 {
+		bottom: 900px; left: 5%;
+		margin-left: -100px;
+		background: transparent url('/images/ships/ship001.png') 0 0 no-repeat;
+		width: 148px; height: 257px;
+
+		.hp-engine {
+			position: absolute;
+			bottom: 30px; left: 50%;
+		}
+	}
+
+}
+
+
+// particles
+.hp-star-001 {
+	background: transparent url('/images/particles/star002.png') 0 0 no-repeat;
+	width: 15px; height: 15px;
+	z-index: -1;
 }
