Spacing out the timeline element further, to create a more spacious environment for images

--- a/ember/app/templates/index.hbs
+++ b/ember/app/templates/index.hbs
@@ -72,7 +72,7 @@
 
 		<!-- parallax ship & particle effect -->
 		<div class="parallax-container-inner">
-			<div class="hp-ship hp-ship-001" data-bottom-top="bottom: 900px;" data-top-bottom="bottom: 3000px;">
+			<div class="hp-ship hp-ship-001" data-bottom-top="margin-bottom: 0px;" data-top-bottom="margin-bottom: 1500px;">
 				<div class="hp-engine"></div>
 			</div>
 		</div>
